[package]
name = "luckychacha-reservation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.59"
chrono = "0.4.23"
luckychacha-reservation-abi = { version = "0.1.0", path = "../abi" }
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
thiserror = "1.0.37"
tokio = { version = "1.23.0", features = ["full"] }
futures = { version = "0.3.26", default-features = false }
tracing = "0.1.37"

[dev-dependencies]
prost-types = "0.11.6"
sqlx-database-tester = { version = "0.4.2", features = ["runtime-tokio"] }
