[package]
name = "luckychacha-reservation-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
luckychacha-reservation = { version = "0.1.0", path = "../reservation" }
luckychacha-reservation-abi = { version = "0.1.0", path = "../abi" }
shellexpand = "3.0.0"
tokio = { version = "1.25.0", features = ["full"] }
tonic = { version = "0.8.3", features = ["tokio-rustls", "gzip"] }
futures = { version = "0.3.26", default-features = false }

[dev-dependencies]
lazy_static = "1.4.0"
sqlx = { version = "0.6.2", features = ["chrono", "uuid", "runtime-tokio-rustls", "postgres"] }
luckychacha-sqlx-pg-tester = "0.1.1"
